Printing: Fix problems with system dialog and hidden preview

Bug: 796057
Change-Id: Ifda86af778af0fabf1153189a193c92b36727a1c